// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`property path parser can inline sequences that are backeted 1`] = `
Object {
  "paths": Array [
    Object {
      "path": "propOne",
    },
    Object {
      "paths": Array [
        Object {
          "path": "propTwo",
        },
        Object {
          "path": "propThree",
        },
      ],
      "type": "sequence",
    },
    Object {
      "paths": Array [
        Object {
          "path": "propFour",
        },
        Object {
          "path": "propFive",
        },
      ],
      "type": "sequence",
    },
  ],
  "type": "sequence",
}
`;

exports[`property path parser can parse complex paths 1`] = `
Object {
  "paths": Array [
    Object {
      "paths": Array [
        Object {
          "modifier": Object {
            "max": Infinity,
            "min": 1,
          },
          "path": "altOnePropOne",
        },
        Object {
          "modifier": Object {
            "max": Infinity,
            "min": 1,
          },
          "path": "altOnePropTwo",
        },
      ],
      "type": "sequence",
    },
    Object {
      "paths": Array [
        Object {
          "modifier": Object {
            "max": Infinity,
            "min": 0,
          },
          "path": "altTwoPropOne",
        },
        Object {
          "modifier": Object {
            "max": 3,
            "min": 3,
          },
          "path": "propThree",
        },
      ],
      "type": "sequence",
    },
  ],
  "type": "alternative",
}
`;

exports[`property path parser can parse path with spaces 1`] = `
Object {
  "paths": Array [
    Object {
      "path": "propOne",
    },
    Object {
      "paths": Array [
        Object {
          "path": "altPropOne",
        },
        Object {
          "path": "altPropTwo",
        },
      ],
      "type": "alternative",
    },
    Object {
      "modifier": Object {
        "max": Infinity,
        "min": 0,
      },
      "path": Object {
        "path": "propThree",
      },
    },
  ],
  "type": "sequence",
}
`;

exports[`property path parser can parse simple sequences 1`] = `
Object {
  "paths": Array [
    Object {
      "path": "propOne",
    },
    Object {
      "path": "propTwo",
    },
    Object {
      "path": "propThree",
    }
  ],
  "type": "sequence",
}
`;
